--- a/packages/package.json
+++ b/packages/package.json
@@ -34,8 +34,8 @@
    },
    "devDependencies": {
       "@types/react": "latest",
-      "bun-types": "^1.2.15",
-      "typescript": "latest"
+      "bun-types": "latest",
+      "typescript": "^5.8.3"
    },
    "peerDependencies": {
       "react": "latest",
